[gd_scene load_steps=11 format=3 uid="uid://1jyxmaw0srxp"]

[ext_resource type="Script" path="res://Scenes/UI/ui.gd" id="1_x4qi6"]
[ext_resource type="PackedScene" uid="uid://05xy1so6sljt" path="res://Scenes/Button/button.tscn" id="2_4plhr"]
[ext_resource type="FontFile" uid="uid://53yiorauim7c" path="res://Assets/Font/Arvo-Bold.ttf" id="2_vsoau"]
[ext_resource type="PackedScene" uid="uid://b3oesmcbna55s" path="res://Scenes/PauseMenu/pause_menu.tscn" id="3_4ldio"]
[ext_resource type="Texture2D" uid="uid://d2gwn4apfgvvj" path="res://Assets/text.png" id="3_yykbp"]
[ext_resource type="FontFile" uid="uid://dpij2clfuqdep" path="res://Assets/Font/Arvo-Regular.ttf" id="4_hmtji"]
[ext_resource type="Texture2D" uid="uid://br24b67y4ukyc" path="res://Assets/textpressed.png" id="4_kx002"]
[ext_resource type="PackedScene" uid="uid://iqwfcj1jwxhp" path="res://Scenes/GameOverPanel/game_over_panel.tscn" id="4_txf64"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ivrqr"]
atlas = ExtResource("3_yykbp")
region = Rect2(0, 512, 1024, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k0st"]
atlas = ExtResource("4_kx002")
region = Rect2(0, 512, 1024, 256)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_x4qi6")

[node name="BottomPanel" type="Control" parent="."]
custom_minimum_size = Vector2(0, 110)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -110.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0

[node name="ColorRect" type="ColorRect" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.244776, 0.244776, 0.244776, 0.552941)

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 11
alignment = 1

[node name="PanelMoneyDisplay" type="Control" parent="BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="BottomPanel/HBoxContainer/PanelMoneyDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -21.0
offset_right = 80.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_vsoau")
theme_override_font_sizes/font_size = 30
text = "MONEY: 0$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelButtons" type="Control" parent="BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel/HBoxContainer/PanelButtons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Button1" parent="BottomPanel/HBoxContainer/PanelButtons/HBoxContainer" instance=ExtResource("2_4plhr")]
layout_mode = 2
id = 1

[node name="Button2" parent="BottomPanel/HBoxContainer/PanelButtons/HBoxContainer" instance=ExtResource("2_4plhr")]
layout_mode = 2
id = 2

[node name="Button3" parent="BottomPanel/HBoxContainer/PanelButtons/HBoxContainer" instance=ExtResource("2_4plhr")]
layout_mode = 2
id = 3

[node name="Button4" parent="BottomPanel/HBoxContainer/PanelButtons/HBoxContainer" instance=ExtResource("2_4plhr")]
layout_mode = 2
id = 4

[node name="Button5" parent="BottomPanel/HBoxContainer/PanelButtons/HBoxContainer" instance=ExtResource("2_4plhr")]
layout_mode = 2
id = 5

[node name="Button6" parent="BottomPanel/HBoxContainer/PanelButtons/HBoxContainer" instance=ExtResource("2_4plhr")]
layout_mode = 2
id = 6

[node name="Button7" parent="BottomPanel/HBoxContainer/PanelButtons/HBoxContainer" instance=ExtResource("2_4plhr")]
layout_mode = 2
id = 7

[node name="Button8" parent="BottomPanel/HBoxContainer/PanelButtons/HBoxContainer" instance=ExtResource("2_4plhr")]
layout_mode = 2
id = 8

[node name="PanelHoverDisplay" type="Control" parent="BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel/HBoxContainer/PanelHoverDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -65.0
offset_right = -65.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control1" type="Control" parent="BottomPanel/HBoxContainer/PanelHoverDisplay/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoLabel" type="Label" parent="BottomPanel/HBoxContainer/PanelHoverDisplay/HBoxContainer/Control1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_hmtji")
theme_override_font_sizes/font_size = 25
text = "Water:"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Control2" type="Control" parent="BottomPanel/HBoxContainer/PanelHoverDisplay/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoLabel" type="Label" parent="BottomPanel/HBoxContainer/PanelHoverDisplay/HBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_hmtji")
theme_override_font_sizes/font_size = 25
text = "Food:"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Control3" type="Control" parent="BottomPanel/HBoxContainer/PanelHoverDisplay/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoLabel" type="Label" parent="BottomPanel/HBoxContainer/PanelHoverDisplay/HBoxContainer/Control3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_hmtji")
theme_override_font_sizes/font_size = 25
text = "Happiness:"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PanelPause" type="Control" parent="BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="PauseButton1" type="Button" parent="BottomPanel/HBoxContainer/PanelPause"]
visible = false
custom_minimum_size = Vector2(75, 75)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "PAUSE"

[node name="PanelContainer" type="PanelContainer" parent="BottomPanel/HBoxContainer/PanelPause"]
layout_mode = 0
offset_left = 24.0
offset_top = 16.0
offset_right = 64.0
offset_bottom = 56.0
scale = Vector2(4.87998, 1.95998)

[node name="PauseButton" type="TextureButton" parent="BottomPanel/HBoxContainer/PanelPause/PanelContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_ivrqr")
texture_pressed = SubResource("AtlasTexture_8k0st")
texture_hover = SubResource("AtlasTexture_8k0st")
ignore_texture_size = true
stretch_mode = 1

[node name="PauseMenu" parent="." instance=ExtResource("3_4ldio")]
visible = false

[node name="GameOverPanel" parent="." instance=ExtResource("4_txf64")]
visible = false

[connection signal="button_down" from="BottomPanel/HBoxContainer/PanelPause/PauseButton1" to="." method="_on_pause_button_button_down"]
[connection signal="button_down" from="BottomPanel/HBoxContainer/PanelPause/PanelContainer/PauseButton" to="." method="_on_pause_button_button_down"]
